--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ db.ref("products").on("value", function(snapshot){
 });
 
 // --- DATA PEMBAYARAN TOKO ---
-var rekeningToko = "Bank ABC 1234567890 a.n. SaAya Donat";
+var rekeningToko = "BCA 1482049731 a.n. Rahma Silfa Ningrum";
 
 // --- RENDER PRODUK ---
 function render(){
